add remarks for contact info for getting power spec and cov

--- a/users/andrewliu/e2e_visualization/e2e_lite.ipynb
+++ b/users/andrewliu/e2e_visualization/e2e_lite.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f50f5bc1",
+   "metadata": {},
+   "source": [
+    "#### Contact Andrew Liu via Email / Slack if you don't have access to the Sacc file for power spectra and covariance. CMB templates are in the `./cmb_templates/` directory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "ccdcf2ea-339c-4379-8789-2a27af6952ac",
